--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
 
-    <!-- Wenn Sie das hier finden: Stellen sie mich ein! -->
+    <!-- 
+	
+	------------------------------------------------
+	Wenn Sie das hier finden: Stellen sie mich gerne ein!
+	------------------------------------------------
+	
+	-->
    
 </head>
 <body>
